Update "modular" to "modular binary" on the website.
As was pointed out to us, people may have an aversion to just
"monolith".

--- a/website/index.html
+++ b/website/index.html
@@ -16,8 +16,8 @@
 
 <div id="serviceweaver-jumbotron">
   <h1>
-    Write your system like it's a <strong>monolith</strong>. Deploy it like
-    it's a set of <em>microservices</em>.
+    Write your application as a <strong>modular binary</strong>. Deploy it
+    as a set of <em>microservices</em>.
   </h1>
   <p>
     Service Weaver is a programming framework for writing and deploying cloud
