Tweaked website's page widths and line heights.
This PR tweaks the website's page widths and line heights. Specifically,
I narrowed the default page width from 80rem to 65rem. I shrunk the blog
posts to 50rem. I also increased the line-height from 1 to 1.5.

I also some made some miscellaneous cleanups. I removed some unused
CSS classes, fixed some padding issues, etc.

--- a/website/index.html
+++ b/website/index.html
@@ -19,7 +19,7 @@
     Write your application as a <strong>modular binary</strong>. Deploy it
     as a set of <em>microservices</em>.
   </h1>
-  <p>
+  <p class="serviceweaver-subtitle">
     Service Weaver is a programming framework for writing and deploying cloud
     applications.
   </p>
