Allow the user to change line length in wrap app.
This PR adds functionality to the wrap app to allow a user to change the
length to which lines are wrapped.

--- a/examples/wrap/index.html
+++ b/examples/wrap/index.html
@@ -30,7 +30,7 @@
           <textarea id="unwrapped" placeholder="Enter text here..."></textarea>
         </div>
         <div>
-          <h1>Wrapped to 80 Characters</h1>
+          <h1>Wrapped to <input id="linewidth" type="number" value="40" min="1"/> Characters</h1>
           <pre id="wrapped"></pre>
         </div>
       </div>
