Updated metrics package documentation.
This PR adds documentation to the metrics package. This text is borrowed
heavily from the docs on the website. I also fixed some broken code in
the docs that were written before the metrics package was moved out of
the core weaver package.

--- a/website/index.html
+++ b/website/index.html
@@ -167,7 +167,7 @@ public_listener = [
       </p>
 <markdown>
 ```go
-var count = weaver.NewCounter(
+var count = metrics.NewCounter(
     "example_count",
     "An example of a Service Weaver counter",
 )
