Added CORBA blog post to News page on website.
I also posted the blog on hacker news, reddit, discord, and twitter.

--- a/website/news.html
+++ b/website/news.html
@@ -24,12 +24,16 @@ document.addEventListener('DOMContentLoaded', () => {
       text: 'We will present Service Weaver at <a href="https://inthecloud.withgoogle.com/cloud-developer-days-warsaw-23/register.html">Warsaw Cloud Developer Day</a> next Tuesday. You can register for the event <a href="https://inthecloud.withgoogle.com/cloud-developer-days-warsaw-23/register.html">here</a>.',
     },
     {
+      date: new Date('2023-04-17'),
+      text: 'New blog post on <a href="./blog/corba.html">remote method calls, the fallacies of distributed computing, and CORBA</a>.',
+    },
+    {
       date: new Date('2023-04-12'),
       text: 'We will be at <a href="https://events.linuxfoundation.org/kubecon-cloudnativecon-europe">KubeCon</a> in Amsterdam next week. You can find us in the Google booth.',
     },
     {
       date: new Date('2023-04-05'),
-      text: 'New blog post on <a href="https://serviceweaver.dev/blog/deployers.html">how to implement a Service Weaver deployer</a>.',
+      text: 'New blog post on <a href="./blog/deployers.html">how to implement a Service Weaver deployer</a>.',
     },
     {
       date: new Date('2023-04-03'),
