--- a/website/news.html
+++ b/website/news.html
@@ -20,6 +20,10 @@
 document.addEventListener('DOMContentLoaded', () => {
   const items = [
     {
+      date: new Date('2023-04-18'),
+      text: 'We will present Service Weaver at <a href="https://inthecloud.withgoogle.com/cloud-developer-days-warsaw-23/register.html">Warsaw Cloud Developer Day</a> next Tuesday. You can register for the event <a href="https://inthecloud.withgoogle.com/cloud-developer-days-warsaw-23/register.html">here</a>.',
+    },
+    {
       date: new Date('2023-04-12'),
       text: 'We will be at <a href="https://events.linuxfoundation.org/kubecon-cloudnativecon-europe">KubeCon</a> in Amsterdam next week. You can find us in the Google booth.',
     },
