Remove weaver.Get (obsoleted by weaver.Ref).
Remove the obsolete weaver.Get[T] API. Users should now declare
weaver.Ref[T] fields in their component implementation struct
instead.

Fixed all callers.

Tweaked examples/hello to more closely match the sample code in
the documentation.

--- a/website/index.html
+++ b/website/index.html
@@ -67,10 +67,7 @@ func (adder) Add(_ context.Context, x, y int) (int, error) {
   <div class="intro-col">
 <markdown>
 ```go
-adder, err := weaver.Get[Adder](root)
-if err != nil {
-    panic(err)
-}
+var adder Adder = ... // See documentation
 sum, err := adder.Add(ctx, 1, 2)
 </markdown>
   </div>
