Add news about the Workshop on Application Networking

--- a/website/news.html
+++ b/website/news.html
@@ -20,6 +20,10 @@
 document.addEventListener('DOMContentLoaded', () => {
   const items = [
     {
+      date: new Date('2023-05-04'),
+      text: 'Service Weaver at the <a href="https://foci.uw.edu/event_may-2023_workshop-an.html">Workshop on Application Networking</a>, organized by the University of Washington.',
+    },
+    {
       date: new Date('2023-04-18'),
       text: 'We will present Service Weaver at <a href="https://inthecloud.withgoogle.com/cloud-developer-days-warsaw-23/register.html">Warsaw Cloud Developer Day</a> next Tuesday. You can register for the event <a href="https://inthecloud.withgoogle.com/cloud-developer-days-warsaw-23/register.html">here</a>.',
     },
