Add DevOps Pro Europe news

--- a/website/news.html
+++ b/website/news.html
@@ -20,6 +20,10 @@
 document.addEventListener('DOMContentLoaded', () => {
   const items = [
     {
+      date: new Date('2023-05-20'),
+      text: 'Service Weaver at <a href="https://devopspro.lt/">DevOps Pro Europe</a>.',
+    },
+    {
       date: new Date('2023-05-17'),
       text: 'Vision paper on modern cloud development to appear at <a href="https://sigops.org/s/conferences/hotos/2023/">HotOS\'23</a>. You can read the draft <a href="./assets/docs/hotos23_vision_paper.pdf">here</a>.',
     },
