Add workshops tab

--- a/website/news.html
+++ b/website/news.html
@@ -20,6 +20,10 @@
 document.addEventListener('DOMContentLoaded', () => {
   const items = [
     {
+      date: new Date('2023-06-02'),
+      text: 'We are starting a series of Service Weaver workshops. Please check <a href="./workshops.html">here</a> for details.',
+    },
+    {
       date: new Date('2023-05-20'),
       text: 'Service Weaver at <a href="https://devopspro.lt/">DevOps Pro Europe</a>.',
     },
