Add more workshops, and the Google I/O Extended talk

--- a/website/news.html
+++ b/website/news.html
@@ -20,6 +20,10 @@
 document.addEventListener('DOMContentLoaded', () => {
   const items = [
     {
+      date: new Date('2023-06-09'),
+      text: 'Service Weaver talk at <a href="https://gdg.community.dev/events/details/google-gdg-san-francisco-presents-google-io-extended-san-francisco-in-person/">Google I/O Extended San Francisco</a>.',
+    },
+    {
       date: new Date('2023-06-02'),
       text: 'We are starting a series of Service Weaver workshops. Please check <a href="./workshops.html">here</a> for details.',
     },
