--- a/website/workshops.html
+++ b/website/workshops.html
@@ -38,6 +38,21 @@
         location: 'Zurich',
         link: '<a href="https://gdg.community.dev/events/details/google-gdg-zurich-presents-service-weaver-workshop/">Register</a>',
       },
+      {
+        date: new Date('2023-08-15'),
+        location: 'Dublin',
+        link: 'TBA',
+      },
+      {
+        date: new Date('2023-08-16'),
+        location: 'London',
+        link: 'TBA',
+      },
+      {
+        date: new Date('2023-08-18'),
+        location: 'Paris',
+        link: 'TBA',
+      },
     ];
 
     const table = document.getElementById('workshops');
