Add podcast news

--- a/website/news.html
+++ b/website/news.html
@@ -20,8 +20,12 @@
 document.addEventListener('DOMContentLoaded', () => {
   const items = [
     {
+      date: new Date('2023-06-14'),
+      text: 'Join us on a <a href="https://www.youtube.com/watch?v=KFN-P84YZfk&ab_channel=Changelog">K8s vs serverless for distributed systems</a> podcast today.',
+    },
+    {
       date: new Date('2023-06-09'),
-      text: 'Service Weaver talk at <a href="https://gdg.community.dev/events/details/google-gdg-san-francisco-presents-google-io-extended-san-francisco-in-person/">Google I/O Extended San Francisco</a>.',
+      text: 'Service Weaver talk at <a href="https://gdg.community.dev/events/details/google-gdg-san-francisco-presents-google-io-extended-san-francisco-in-person/">Google I/O Extended San Francisco</a> on June 21st.',
     },
     {
       date: new Date('2023-06-02'),
@@ -29,7 +33,7 @@ document.addEventListener('DOMContentLoaded', () => {
     },
     {
       date: new Date('2023-05-20'),
-      text: 'Service Weaver at <a href="https://devopspro.lt/">DevOps Pro Europe</a>.',
+      text: 'Service Weaver at <a href="https://devopspro.lt/">DevOps Pro Europe</a> on May 24th.',
     },
     {
       date: new Date('2023-05-17'),
@@ -37,7 +41,7 @@ document.addEventListener('DOMContentLoaded', () => {
     },
     {
       date: new Date('2023-05-04'),
-      text: 'Service Weaver at the <a href="https://foci.uw.edu/event_may-2023_workshop-an.html">Workshop on Application Networking</a>, organized by the University of Washington.',
+      text: 'Service Weaver at the <a href="https://foci.uw.edu/event_may-2023_workshop-an.html">Workshop on Application Networking</a>, organized by the University of Washington on May 8th.',
     },
     {
       date: new Date('2023-04-18'),
