--- a/website/news.html
+++ b/website/news.html
@@ -32,6 +32,10 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2023, JUNE, 14),
+      text: 'Service Weaver talk at <a href="https://www.techsummit.tech/TechSummitSF">Tech Summit San Francisco</a> on June 23rd.',
+    },
+    {
       date: new Date(2023, JUNE, 13),
       text: 'Join us on a <a href="https://www.youtube.com/watch?v=KFN-P84YZfk&ab_channel=Changelog">K8s vs serverless for distributed systems</a> podcast today.',
     },
