--- a/website/examples.html
+++ b/website/examples.html
@@ -16,7 +16,7 @@
 
 <div class="example">
   <h1>Emojis</h1>
-  <!-- <a class="examples-link" href="">Live Demo</a> -->
+  <a class="examples-link" href="https://emojis.serviceweaver.dev/">Live Demo</a>
   <a class="examples-link" href="https://github.com/serviceweaver/workshops">Source Code</a>
 
   <p>
@@ -30,7 +30,7 @@
 
 <div class="example">
   <h1>Online Boutique</h1>
-  <!-- <a class="examples-link" href="">Live Demo</a> -->
+  <a class="examples-link" href="https://onlineboutique.serviceweaver.dev/">Live Demo</a>
   <a class="examples-link" href="https://github.com/ServiceWeaver/weaver/tree/main/examples/onlineboutique">Source Code</a>
 
   <p>
