Add GopherCon'EU news

--- a/website/news.html
+++ b/website/news.html
@@ -32,6 +32,10 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2023, JUNE, 20),
+      text: 'Service Weaver at <a href="https://gophercon.eu/">GopherCon Europe</a>. Come see our talk on June 28th.',
+    },
+    {
       date: new Date(2023, JUNE, 14),
       text: 'Service Weaver talk at <a href="https://www.techsummit.tech/TechSummitSF">Tech Summit San Francisco</a> on June 23rd.',
     },
