--- a/website/workshops.html
+++ b/website/workshops.html
@@ -31,27 +31,27 @@
       {
         date: new Date('2023-06-27'),
         location: 'Berlin',
-        link: '<a href="https://gdg.community.dev/events/details/google-gdg-berlin-golang-presents-service-weaver-workshop/">Register</a>',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-berlin-golang-presents-service-weaver-workshop/">GDG Berlin Golang</a>',
       },
       {
         date: new Date('2023-06-30'),
         location: 'Zurich',
-        link: '<a href="https://gdg.community.dev/events/details/google-gdg-zurich-presents-service-weaver-workshop/">Register</a>',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-zurich-presents-service-weaver-workshop/">GDG Zurich</a>, <a href="https://www.meetup.com/zurich-gophers/events/294260278">Zurich Gophers</a>',
       },
       {
         date: new Date('2023-08-15'),
         location: 'Dublin',
-        link: 'TBA',
+        register: 'TBA',
       },
       {
         date: new Date('2023-08-16'),
         location: 'London',
-        link: 'TBA',
+        register: 'TBA',
       },
       {
         date: new Date('2023-08-18'),
         location: 'Paris',
-        link: 'TBA',
+        register: 'TBA',
       },
     ];
 
@@ -81,7 +81,7 @@
       itemRow.appendChild(itemCellLoc)
 
       const itemCellLink = document.createElement("td")
-      itemCellLink.innerHTML = item.link
+      itemCellLink.innerHTML = item.register
       itemRow.appendChild(itemCellLink)
     }
   });
