Added workshop links to website.
Let me know if we should emphasize the workshop links even more.

--- a/website/workshops.html
+++ b/website/workshops.html
@@ -15,12 +15,11 @@
 -->
 
 <p>
-  We're hosting a number of workshops where you can get hands-on experience writing Service Weaver apps.
-  Use the links below to sign up.
+  We're hosting a number of workshops where you can get hands-on experience writing Service Weaver apps with guidance from an instructor. Use the links below to sign up. All the workshop materials are also <a href="https://github.com/serviceweaver/workshops">available online</a>, so you can complete the workshop on your own.
 <p>
 
 <p>
-  <i>Please reach out to us if you're interested in hosting a Service Weaver workshop in your city or institution!</i>
+  <em>Please reach out to us if you're interested in hosting a Service Weaver workshop in your city or institution!</em>
 </p>
 
 <table id="workshops" class="workshops-table"></table>
