Add post HotOS news

--- a/website/news.html
+++ b/website/news.html
@@ -32,6 +32,10 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2023, JUNE, 26),
+      text: 'We had a great discussion on how to implement modern cloud applications with the research community at <a href="https://sigops.org/s/conferences/hotos/2023/">HotOS\'23</a>. <a href="./assets/docs/hotos23_vision_paper_slides.pdf">Here</a> are the slides.',
+    },
+    {
       date: new Date(2023, JUNE, 20),
       text: 'Service Weaver at <a href="https://gophercon.eu/">GopherCon Europe</a>. Come see our talk on June 28th.',
     },
