--- a/website/workshops.html
+++ b/website/workshops.html
@@ -38,6 +38,11 @@
         register: '<a href="https://gdg.community.dev/events/details/google-gdg-zurich-presents-service-weaver-workshop/">GDG Zurich</a>, <a href="https://www.meetup.com/zurich-gophers/events/294260278">Zurich Gophers</a>',
       },
       {
+        date: new Date('2023-07-27'),
+        location: 'San Francisco',
+        register: 'TBA',
+      },
+      {
         date: new Date('2023-08-15'),
         location: 'Dublin',
         register: 'TBA',
