--- a/website/news.html
+++ b/website/news.html
@@ -32,6 +32,10 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2023, JULY, 3),
+      text: 'We recently held Service Weaver workshops in Berlin and Zurich, where we had an amazing time engaging with the local Go and <a href="https://gdg.community.dev/">GDG</a> communities. If you are interested in learning more about Service Weaver, please check out the upcoming <a href="workshops.html">workshops</a>.',
+    },
+    {
       date: new Date(2023, JUNE, 26),
       text: 'We had a great discussion on how to implement modern cloud applications with the research community at <a href="https://sigops.org/s/conferences/hotos/2023/">HotOS\'23</a>. <a href="./assets/docs/hotos23_vision_paper_slides.pdf">Here</a> are the slides.',
     },
