Add registration links for the workshops in London and Paris

--- a/website/workshops.html
+++ b/website/workshops.html
@@ -45,12 +45,12 @@
       {
         date: new Date('2023-08-16'),
         location: 'London',
-        register: 'TBA',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-cloud-london-presents-workshop-on-service-weaver-by-robert-grandl-google-london/">GDG Cloud London</a>',
       },
       {
         date: new Date('2023-08-18'),
         location: 'Paris',
-        register: 'TBA',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-paris-presents-workshop-on-service-weaver-by-robert-grandl-google-paris/">GDG Paris</a>',
       },
     ];
 
