add i/o extended and systems@scale news

--- a/website/news.html
+++ b/website/news.html
@@ -32,6 +32,14 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2023, JULY, 10),
+      text: 'Join us at the <a href="https://atscaleconference.com/events/systems-scale-summer-2023/">Systems@Scale</a> conference on July 19th if you want to ask us questions about Service Weaver.',
+    },
+    {
+      date: new Date(2023, JULY, 7),
+      text: 'Excited to talk about Service Weaver at the <a href="https://gdg.community.dev/events/details/google-gdg-silicon-valley-presents-google-io-extended-silicon-valley-2023/cohost-gdg-silicon-valley">Google I/O Extended Silicon Valley</a> on July 14th and at the <a href="https://gdg.community.dev/events/details/google-gdg-san-jose-presents-google-io-extended-san-jose-in-person-only/">Google I/O Extended San Jose</a> on July 19th.',
+    },
+    {
       date: new Date(2023, JULY, 3),
       text: 'We recently held Service Weaver workshops in Berlin and Zurich, where we had an amazing time engaging with the local Go and <a href="https://gdg.community.dev/">GDG</a> communities. If you are interested in learning more about Service Weaver, please check out the upcoming <a href="workshops.html">workshops</a>.',
     },
