add dublin workshop info

--- a/website/workshops.html
+++ b/website/workshops.html
@@ -62,7 +62,7 @@
       {
         date: new Date(2023, AUGUST, 15),
         location: 'Dublin',
-        register: 'TBA',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-dublin-presents-workshop-on-service-weaver-by-robert-grandl-google-dublin/">GDG Dublin</a>',
       },
       {
         date: new Date(2023, AUGUST, 16),
