add workshops dates in nordic countries

--- a/website/workshops.html
+++ b/website/workshops.html
@@ -74,6 +74,21 @@
         location: 'Paris',
         register: '<a href="https://gdg.community.dev/events/details/google-gdg-paris-presents-workshop-on-service-weaver-by-robert-grandl-google-paris/">GDG Paris</a>',
       },
+      {
+        date: new Date(2023, SEPTEMBER, 18),
+        location: 'Copenhagen',
+        register: 'TBA',
+      },
+      {
+        date: new Date(2023, SEPTEMBER, 19),
+        location: 'Oslo',
+        register: 'TBA',
+      },
+      {
+        date: new Date(2023, SEPTEMBER, 20),
+        location: 'Stockholm',
+        register: 'TBA',
+      },
     ];
 
     const table = document.getElementById('workshops');
