--- a/website/news.html
+++ b/website/news.html
@@ -32,6 +32,10 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2023, JULY, 18),
+      text: 'Excited to be part of the <a href="https://sites.google.com/view/gfsa-cloud/program-overview">Google for Startups Accelerator</a> program. Looking forward to chatting with startups founders about Service Weaver on July 26th.',
+    },
+    {
       date: new Date(2023, JULY, 10),
       text: 'Join us at the <a href="https://atscaleconference.com/events/systems-scale-summer-2023/">Systems@Scale</a> conference on July 19th if you want to ask us questions about Service Weaver.',
     },
