Add Sunnyvale workshop

--- a/website/workshops.html
+++ b/website/workshops.html
@@ -55,11 +55,6 @@
         register: '<a href="https://gdg.community.dev/events/details/google-gdg-san-francisco-presents-service-weaver-workshop-in-person/cohost-gdg-san-francisco">GDG San Francisco</a>',
       },
       {
-        date: new Date(2023, AUGUST, 3),
-        location: 'Sunnyvale',
-        register: 'TBA',
-      },
-      {
         date: new Date(2023, AUGUST, 15),
         location: 'Dublin',
         register: '<a href="https://gdg.community.dev/events/details/google-gdg-dublin-presents-workshop-on-service-weaver-by-robert-grandl-google-dublin/">GDG Dublin</a>',
@@ -68,6 +63,11 @@
         date: new Date(2023, AUGUST, 16),
         location: 'London',
         register: '<a href="https://gdg.community.dev/events/details/google-gdg-cloud-london-presents-workshop-on-service-weaver-by-robert-grandl-google-london/">GDG Cloud London</a>',
+      },
+      {
+        date: new Date(2023, AUGUST, 17),
+        location: 'Sunnyvale',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-silicon-valley-presents-service-weaver-workshop-in-person/">GDG Silicon Valley</a>',
       },
       {
         date: new Date(2023, AUGUST, 18),
