add partners on our workshops page

--- a/website/workshops.html
+++ b/website/workshops.html
@@ -122,3 +122,14 @@
     }
   });
 </script>
+
+<p>
+<br>
+  <h1 style="font-weight: bold; font-size: 200%;">Partners</h1>
+</p>
+
+<div>
+  '<a href="https://gdg.community.dev/"><img src="assets/images/GDG_logo.png" alt="" style="width:50%"></a>'
+  '<a href="https://www.aicamp.ai/"><img src="assets/images/aicamp_logo.png" alt="" style="width:50%"></a>'
+</div>
+
