add partners on our workshops page (#479)
add partners on our workshops page

Co-authored-by: Michael Whittaker <mwhittaker@google.com>

--- a/website/workshops.html
+++ b/website/workshops.html
@@ -122,3 +122,14 @@
     }
   });
 </script>
+
+<h1>Partners</h1>
+
+<div id="partners">
+  <a href="https://gdg.community.dev/" class="partner_logo">
+    <img src="assets/images/GDG_logo.png" alt="GDG logo">
+  </a>
+  <a href="https://www.aicamp.ai/" class="partner_logo">
+    <img src="assets/images/aicamp_logo.png" alt="AI Camp logo">
+  </a>
+</div>
