add aicamp sf link

--- a/website/workshops.html
+++ b/website/workshops.html
@@ -52,7 +52,7 @@
       {
         date: new Date(2023, JULY, 27),
         location: 'San Francisco',
-        register: '<a href="https://gdg.community.dev/events/details/google-gdg-san-francisco-presents-service-weaver-workshop-in-person/cohost-gdg-san-francisco">GDG San Francisco</a>',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-san-francisco-presents-service-weaver-workshop-in-person/cohost-gdg-san-francisco">GDG San Francisco</a>, <a href="https://www.aicamp.ai/event/eventdetails/W2023072718">AICamp SF</a>',
       },
       {
         date: new Date(2023, AUGUST, 15),
