update Paris workshop info

--- a/website/workshops.html
+++ b/website/workshops.html
@@ -72,7 +72,7 @@
       {
         date: new Date(2023, AUGUST, 18),
         location: 'Paris',
-        register: '<a href="https://gdg.community.dev/events/details/google-gdg-paris-presents-workshop-on-service-weaver-by-robert-grandl-google-paris/">GDG Paris</a>',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-paris-presents-workshop-on-service-weaver-by-robert-grandl-google-paris/">GDG Paris</a>, <a href="https://www.meetup.com/golang-paris/events/295133777/">Golang Paris</a>',
       },
       {
         date: new Date(2023, SEPTEMBER, 18),
