add oslo workshop link

--- a/website/workshops.html
+++ b/website/workshops.html
@@ -62,7 +62,7 @@
       {
         date: new Date(2023, AUGUST, 16),
         location: 'London',
-        register: '<a href="https://gdg.community.dev/events/details/google-gdg-cloud-london-presents-workshop-on-service-weaver-by-robert-grandl-google-london/">GDG Cloud London</a>',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-cloud-london-presents-workshop-on-service-weaver-by-robert-grandl-google-london/">GDG (Cloud) London</a>',
       },
       {
         date: new Date(2023, AUGUST, 17),
@@ -82,7 +82,7 @@
       {
         date: new Date(2023, SEPTEMBER, 19),
         location: 'Oslo',
-        register: 'TBA',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-cloud-oslo-norway-presents-service-weaver-workshop/">GDG Cloud Oslo</a>',
       },
       {
         date: new Date(2023, SEPTEMBER, 20),
