Added AICamp links; new workshop dates

--- a/website/workshops.html
+++ b/website/workshops.html
@@ -57,22 +57,32 @@
       {
         date: new Date(2023, AUGUST, 15),
         location: 'Dublin',
-        register: '<a href="https://gdg.community.dev/events/details/google-gdg-dublin-presents-workshop-on-service-weaver-by-robert-grandl-google-dublin/">GDG Dublin</a>',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-dublin-presents-workshop-on-service-weaver-by-robert-grandl-google-dublin/">GDG Dublin</a>, <a href="https://www.aicamp.ai/event/eventdetails/W2023081510">AICamp Dublin</a>',
       },
       {
         date: new Date(2023, AUGUST, 16),
         location: 'London',
-        register: '<a href="https://gdg.community.dev/events/details/google-gdg-cloud-london-presents-workshop-on-service-weaver-by-robert-grandl-google-london/">GDG (Cloud) London</a>',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-cloud-london-presents-workshop-on-service-weaver-by-robert-grandl-google-london/">GDG (Cloud) London</a>, <a href="https://www.aicamp.ai/event/eventdetails/W2023081610">AICamp London</a>',
       },
       {
         date: new Date(2023, AUGUST, 17),
         location: 'Sunnyvale',
-        register: '<a href="https://gdg.community.dev/events/details/google-gdg-silicon-valley-presents-service-weaver-workshop-in-person/">GDG Silicon Valley</a>',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-silicon-valley-presents-service-weaver-workshop-in-person/">GDG Silicon Valley</a>, <a href="https://www.aicamp.ai/event/eventdetails/W2023081717">AICamp Silicon Valley</a>',
       },
       {
         date: new Date(2023, AUGUST, 18),
         location: 'Paris',
-        register: '<a href="https://gdg.community.dev/events/details/google-gdg-paris-presents-workshop-on-service-weaver-by-robert-grandl-google-paris/">GDG Paris</a>, <a href="https://www.meetup.com/golang-paris/events/295133777/">Golang Paris</a>',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-paris-presents-workshop-on-service-weaver-by-robert-grandl-google-paris/">GDG Paris</a>, <a href="https://www.meetup.com/golang-paris/events/295133777/">Golang Paris</a>, <a href="https://www.aicamp.ai/event/eventdetails/W2023081809">AICamp Paris</a>',
+      },
+      {
+        date: new Date(2023, SEPTEMBER, 13),
+        location: 'Boston',
+        register: 'TBA',
+      },
+      {
+        date: new Date(2023, SEPTEMBER, 15),
+        location: 'Atlanta',
+        register: 'TBA',
       },
       {
         date: new Date(2023, SEPTEMBER, 18),
