add go new news

--- a/website/news.html
+++ b/website/news.html
@@ -32,6 +32,10 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2023, JULY, 31),
+      text: 'Honored that the Go team has chosen to showcase Service Weaver as an example of how to use the new <b>gonew</b> feature in Go. More info <a href="https://go.dev/blog/gonew">here</a> and <a href="https://github.com/golang/go/discussions/61669">here</a>.',
+    },
+    {
       date: new Date(2023, JULY, 18),
       text: 'Excited to be part of the <a href="https://sites.google.com/view/gfsa-cloud/program-overview">Google for Startups Accelerator</a> program. Looking forward to chatting with startups founders about Service Weaver on July 26th.',
     },
