Add registration link for Atlanta workshop

--- a/website/workshops.html
+++ b/website/workshops.html
@@ -82,7 +82,7 @@
       {
         date: new Date(2023, SEPTEMBER, 15),
         location: 'Atlanta',
-        register: 'TBA',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-atlanta-presents-service-weaver-workshop-in-person/">GDG Atlanta</a>',
       },
       {
         date: new Date(2023, SEPTEMBER, 18),
