Announce the upcoming SW workshops

--- a/website/news.html
+++ b/website/news.html
@@ -32,6 +32,10 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2023, AUGUST, 7),
+      text: 'We will be hosting <a href="https://serviceweaver.dev/workshops.html">workshops</a> in Dublin, London, and Paris during the week of August 14th. Join us, if you are around!',
+    },
+    {
       date: new Date(2023, JULY, 31),
       text: 'Honored that the Go team has chosen to showcase Service Weaver as an example of how to use the new <b>gonew</b> feature in Go. More info <a href="https://go.dev/blog/gonew">here</a> and <a href="https://github.com/golang/go/discussions/61669">here</a>.',
     },
