Add Go meetup Dublin link

--- a/website/workshops.html
+++ b/website/workshops.html
@@ -57,7 +57,7 @@
       {
         date: new Date(2023, AUGUST, 15),
         location: 'Dublin',
-        register: '<a href="https://gdg.community.dev/events/details/google-gdg-dublin-presents-workshop-on-service-weaver-by-robert-grandl-google-dublin/">GDG Dublin</a>, <a href="https://www.aicamp.ai/event/eventdetails/W2023081510">AICamp Dublin</a>',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-dublin-presents-workshop-on-service-weaver-by-robert-grandl-google-dublin/">GDG Dublin</a>, <a href="https://www.aicamp.ai/event/eventdetails/W2023081510">AICamp Dublin</a>, <a href="https://www.meetup.com/dublin-go-meetup/">Dublin Go Meetup</a>',
       },
       {
         date: new Date(2023, AUGUST, 16),
