Add go meetup bay area

--- a/website/news.html
+++ b/website/news.html
@@ -33,7 +33,7 @@ document.addEventListener('DOMContentLoaded', () => {
   const items = [
     {
       date: new Date(2023, AUGUST, 7),
-      text: 'We will be hosting <a href="https://serviceweaver.dev/workshops.html">workshops</a> in Dublin, London, and Paris during the week of August 14th. Join us, if you are around!',
+      text: 'We will be hosting <a href="https://serviceweaver.dev/workshops.html">workshops</a> in the Bay Area, Dublin, London, and Paris during the week of August 14th. Join us, if you are around!',
     },
     {
       date: new Date(2023, JULY, 31),
