--- a/website/workshops.html
+++ b/website/workshops.html
@@ -67,7 +67,7 @@
       {
         date: new Date(2023, AUGUST, 17),
         location: 'Sunnyvale',
-        register: '<a href="https://gdg.community.dev/events/details/google-gdg-silicon-valley-presents-service-weaver-workshop-in-person/">GDG Silicon Valley</a>, <a href="https://www.aicamp.ai/event/eventdetails/W2023081717">AICamp Silicon Valley</a>',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-silicon-valley-presents-service-weaver-workshop-in-person/">GDG Silicon Valley</a>, <a href="https://www.aicamp.ai/event/eventdetails/W2023081717">AICamp Silicon Valley</a>, <a href="https://www.meetup.com/go-silicon-valley/events/295305595/">Golang Silicon Valley</a>',
       },
       {
         date: new Date(2023, AUGUST, 18),
@@ -77,6 +77,11 @@
       {
         date: new Date(2023, SEPTEMBER, 13),
         location: 'Boston',
+        register: 'TBA',
+      },
+      {
+        date: new Date(2023, SEPTEMBER, 14),
+        location: 'New York City',
         register: 'TBA',
       },
       {
