--- a/website/workshops.html
+++ b/website/workshops.html
@@ -82,7 +82,7 @@
       {
         date: new Date(2023, SEPTEMBER, 14),
         location: 'New York City',
-        register: 'TBA',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-nyc-presents-service-weaver-workshop-at-google-nyc/">GDG NYC</a>',
       },
       {
         date: new Date(2023, SEPTEMBER, 15),
