Add links for more workshops

--- a/website/workshops.html
+++ b/website/workshops.html
@@ -77,12 +77,12 @@
       {
         date: new Date(2023, SEPTEMBER, 13),
         location: 'Boston',
-        register: 'TBA',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-cloud-boston-presents-service-weaver-workshop-at-google-cambridge/">GDG Cloud Boston</a>',
       },
       {
         date: new Date(2023, SEPTEMBER, 14),
         location: 'New York City',
-        register: '<a href="https://gdg.community.dev/events/details/google-gdg-nyc-presents-service-weaver-workshop-at-google-nyc/">GDG NYC</a>',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-nyc-presents-service-weaver-workshop-at-google-nyc/">GDG NYC</a>, <a href="https://www.meetup.com/golanguagenewyork/events/295341065">GolangNYC</a>',
       },
       {
         date: new Date(2023, SEPTEMBER, 15),
@@ -102,7 +102,7 @@
       {
         date: new Date(2023, SEPTEMBER, 20),
         location: 'Stockholm',
-        register: 'TBA',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-cloud-stockholm-presents-service-weaver-workshop/">GDG Cloud Stockholm</a>',
       },
     ];
 
