Add GopherCon UK news

--- a/website/news.html
+++ b/website/news.html
@@ -32,6 +32,10 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2023, AUGUST, 11),
+      text: 'Thrilled to attend <a href="https://www.gophercon.co.uk/">GopherCon UK</a>. If you are around, come see our talk followed by a <a href="https://www.gophercon.co.uk/unconference/">workshop</a> on August 17th.',
+    },
+    {
       date: new Date(2023, AUGUST, 7),
       text: 'We will be hosting <a href="https://serviceweaver.dev/workshops.html">workshops</a> in the Bay Area, Dublin, London, and Paris during the week of August 14th. Join us, if you are around!',
     },
