Add link to the Go meetup page in Boston

--- a/website/workshops.html
+++ b/website/workshops.html
@@ -77,7 +77,7 @@
       {
         date: new Date(2023, SEPTEMBER, 13),
         location: 'Boston',
-        register: '<a href="https://gdg.community.dev/events/details/google-gdg-cloud-boston-presents-service-weaver-workshop-at-google-cambridge/">GDG Cloud Boston</a>',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-cloud-boston-presents-service-weaver-workshop-at-google-cambridge/">GDG Cloud Boston</a>, <a href="https://www.meetup.com/bostongo/events/295454707/">Boston Golang</a>',
       },
       {
         date: new Date(2023, SEPTEMBER, 14),
