Add AICamp links to the upcoming workshops.

--- a/website/workshops.html
+++ b/website/workshops.html
@@ -77,12 +77,12 @@
       {
         date: new Date(2023, SEPTEMBER, 13),
         location: 'Boston',
-        register: '<a href="https://gdg.community.dev/events/details/google-gdg-cloud-boston-presents-service-weaver-workshop-at-google-cambridge/">GDG Cloud Boston</a>, <a href="https://www.meetup.com/bostongo/events/295454707/">Boston Golang</a>',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-cloud-boston-presents-service-weaver-workshop-at-google-cambridge/">GDG Cloud Boston</a>, <a href="https://www.meetup.com/bostongo/events/295454707/">Boston Golang</a>, <a href="https://www.aicamp.ai/event/eventdetails/W2023091314">AICamp Boston</a>',
       },
       {
         date: new Date(2023, SEPTEMBER, 14),
         location: 'New York City',
-        register: '<a href="https://gdg.community.dev/events/details/google-gdg-nyc-presents-service-weaver-workshop-at-google-nyc/">GDG NYC</a>, <a href="https://www.meetup.com/golanguagenewyork/events/295341065">GolangNYC</a>',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-nyc-presents-service-weaver-workshop-at-google-nyc/">GDG NYC</a>, <a href="https://www.meetup.com/golanguagenewyork/events/295341065">GolangNYC</a>, <a href="https://www.aicamp.ai/event/eventdetails/W2023091414">AICamp NYC</a>',
       },
     ];
 
