Adding some upcoming workshops

--- a/website/workshops.html
+++ b/website/workshops.html
@@ -66,6 +66,11 @@
       },
       {
         date: new Date(2023, AUGUST, 17),
+        location: 'London',
+        register: '<a href="https://www.gophercon.co.uk/unconference/">GopherCon UK</a>',
+      },
+      {
+        date: new Date(2023, AUGUST, 17),
         location: 'Sunnyvale',
         register: '<a href="https://gdg.community.dev/events/details/google-gdg-silicon-valley-presents-service-weaver-workshop-in-person/">GDG Silicon Valley</a>, <a href="https://www.aicamp.ai/event/eventdetails/W2023081717">AICamp Silicon Valley</a>, <a href="https://www.meetup.com/go-silicon-valley/events/295305595/">Golang Silicon Valley</a>',
       },
@@ -83,6 +88,21 @@
         date: new Date(2023, SEPTEMBER, 14),
         location: 'New York City',
         register: '<a href="https://gdg.community.dev/events/details/google-gdg-nyc-presents-service-weaver-workshop-at-google-nyc/">GDG NYC</a>, <a href="https://www.meetup.com/golanguagenewyork/events/295341065">GolangNYC</a>, <a href="https://www.aicamp.ai/event/eventdetails/W2023091414">AICamp NYC</a>',
+      },
+      {
+        date: new Date(2023, SEPTEMBER, 26),
+        location: 'San Diego',
+        register: '<a href="https://www.gophercon.com/agenda/session/1200016">GopherCon</a>',
+      },
+      {
+        date: new Date(2023, NOVEMBER, 15),
+        location: 'Prague',
+        register: '<a href="tba">Hosted by PureStorage</a>',
+      },
+      {
+        date: new Date(2023, NOVEMBER, 19),
+        location: 'Florence',
+        register: '<a href="tba">Golab</a>',
       },
     ];
 
