Add GopherCon and Devoxx Morocco news.

--- a/website/news.html
+++ b/website/news.html
@@ -32,6 +32,18 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2023, SEPTEMBER, 18),
+      text: 'Service Weaver talk at <a href="https://devoxx.ma/">Devoxx Morocco</a> on October 12th. Excited to have <a href="https://www.linkedin.com/in/sabdelfettah/">Abdel</a> talk about Service Weaver.',
+    },
+    {
+      date: new Date(2023, SEPTEMBER, 15),
+      text: 'Service Weaver talk at <a href="https://gdg.community.dev/events/details/google-gdg-coast-lebanon-presents-devfest-beirut-2023-1/">DevFest Beirut</a> on October 7th. Excited to have <a href="https://www.linkedin.com/in/sabdelfettah/">Abdel</a> talk about Service Weaver.',
+    },
+    {
+      date: new Date(2023, SEPTEMBER, 12),
+      text: 'Service Weaver <a href="https://www.gophercon.com/agenda/session/1200016">workshop</a> at <a href="https://www.gophercon.com/">GopherCon</a>. See you in San Diego.',
+    },
+    {
       date: new Date(2023, AUGUST, 11),
       text: 'Thrilled to attend <a href="https://www.gophercon.co.uk/">GopherCon UK</a>. If you are around, come see our talk followed by a <a href="https://www.gophercon.co.uk/unconference/">workshop</a> on August 17th.',
     },
