Update golab link; add new workshop dates

--- a/website/workshops.html
+++ b/website/workshops.html
@@ -95,14 +95,29 @@
         register: '<a href="https://www.gophercon.com/agenda/session/1200016">GopherCon</a>',
       },
       {
+        date: new Date(2023, NOVEMBER, 2),
+        location: 'Seattle',
+        register: 'TBA',
+      },
+      {
+        date: new Date(2023, NOVEMBER, 9),
+        location: 'Austin',
+        register: 'TBA',
+      },
+      {
         date: new Date(2023, NOVEMBER, 15),
         location: 'Prague',
         register: '<a href="tba">Hosted by PureStorage</a>',
       },
       {
+        date: new Date(2023, NOVEMBER, 16),
+        location: 'Munich',
+        register: 'TBA',
+      },
+      {
         date: new Date(2023, NOVEMBER, 19),
         location: 'Florence',
-        register: '<a href="tba">Golab</a>',
+        register: '<a href="https://golab.io/talks/modern-cloud-development-with-service-weaver">Golab</a>',
       },
     ];
 
