--- a/website/workshops.html
+++ b/website/workshops.html
@@ -107,12 +107,12 @@
       {
         date: new Date(2023, NOVEMBER, 15),
         location: 'Prague',
-        register: '<a href="tba">Hosted by PureStorage</a>',
+        register: '<a href="https://www.meetup.com/prague-golang-meetup/events/296250753/">Hosted by PureStorage</a>',
       },
       {
         date: new Date(2023, NOVEMBER, 16),
         location: 'Munich',
-        register: 'TBA',
+        register: '<a href="https://gdg.community.dev/events/details/google-gdg-cloud-munich-presents-hybrid-workshop-service-weaver/">GDG Cloud Munich</a>',
       },
       {
         date: new Date(2023, NOVEMBER, 19),
