DevFest Nantes news

--- a/website/news.html
+++ b/website/news.html
@@ -32,6 +32,10 @@ document.addEventListener('DOMContentLoaded', () => {
   const DECEMBER = 11;
   const items = [
     {
+      date: new Date(2023, OCTOBER, 16),
+      text: 'Service Weaver talk at <a href="https://devfest2023.gdgnantes.com/en/sessions/towards_modern_development_of_cloud_applications/">DevFest Nantes</a> on October 20th. Excited to have <a href="https://cloud.google.com/developers/advocates/valentin-deleplace">Valentin</a> talk about Service Weaver.',
+    },
+    {
       date: new Date(2023, SEPTEMBER, 18),
       text: 'Service Weaver talk at <a href="https://devoxx.ma/">Devoxx Morocco</a> on October 12th. Excited to have <a href="https://www.linkedin.com/in/sabdelfettah/">Abdel</a> talk about Service Weaver.',
     },
